# vita49-rs

./: .conform.yaml  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
cxx_demo/: Cargo.toml
pyo3_demo/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_send.py
pyo3_demo/src/: lib.rs
vita49/: Cargo.toml
vita49/examples/: udp_recv.rs
vita49/examples/nats_control/: Cargo.toml
vita49/src/: ack.rs  cif0.rs  command.rs  command_payload.rs  lib.rs  packet_header.rs  payload.rs  signal_data.rs  trailer.rs
vita49/tests/: integration_test.rs
